--- a/note_model.ipynb
+++ b/note_model.ipynb
@@ -84,19 +84,19 @@
             "3  Feature         Point             -122.301071               47.596500   \n",
             "4  Feature         Point             -122.306274               47.599930   \n",
             "\n",
-            "   properties/attribute_id properties/label_type properties/neighborhood  \\\n",
-            "0                 52096165        SurfaceProblem                Atlantic   \n",
-            "1                 52096166        SurfaceProblem                Atlantic   \n",
-            "2                 52096167        SurfaceProblem                Atlantic   \n",
-            "3                 52096168        SurfaceProblem                Atlantic   \n",
-            "4                 52096365            NoCurbRamp                Atlantic   \n",
+            "   properties/attribute_id properties/label_type properties/neighborhood  properties/severity  \\\n",
+            "0                 52096165        SurfaceProblem                Atlantic                  4.0   \n",
+            "1                 52096166        SurfaceProblem                Atlantic                  3.0   \n",
+            "2                 52096167        SurfaceProblem                Atlantic                  4.0   \n",
+            "3                 52096168        SurfaceProblem                Atlantic                  4.0   \n",
+            "4                 52096365            NoCurbRamp                Atlantic                  4.0   \n",
             "\n",
-            "   properties/severity  properties/is_temporary  \n",
-            "0                  4.0                    False  \n",
-            "1                  3.0                    False  \n",
-            "2                  4.0                    False  \n",
-            "3                  4.0                    False  \n",
-            "4                  4.0                    False  \n",
+            "   properties/is_temporary  \n",
+            "0                    False  \n",
+            "1                    False  \n",
+            "2                    False  \n",
+            "3                    False  \n",
+            "4                    False  \n",
             "\n",
             "Label type distribution:\n",
             "label_type\n",
@@ -171,8 +171,7 @@
             "Test samples: 16,395\n",
             "\n",
             "Features: ['lon', 'lat', 'neighborhood_encoded', 'severity', 'is_temporary']\n",
-            "Target classes: ['CurbRamp' 'NoCurbRamp' 'NoSidewalk' 'Obstacle' 'Occlusion' 'Other'\n",
-            " 'SurfaceProblem']\n"
+            "Target classes: ['CurbRamp' 'NoCurbRamp' 'NoSidewalk' 'Obstacle' 'Occlusion' 'Other' 'SurfaceProblem']\n"
           ]
         }
       ],
@@ -428,8 +427,7 @@
       "metadata": {},
       "source": [
         "---\n",
-        "## Task 3: Future Problem Prediction (PRIMARY MODEL)\n",
-        "### This is our most accurate model - 95.3% R² score!"
+        "## Task 3: Future Problem Prediction (PRIMARY MODEL)"
       ]
     },
     {
@@ -462,52 +460,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "✓ Grid features created: (965, 18)\n",
+            "Grid features created: (965, 18)\n",
             "\n",
             "Feature columns: ['grid_id', 'center_lon', 'center_lat', 'issue_count', 'avg_severity', 'max_severity', 'std_severity', 'temp_count', 'issue_type_diversity', 'type_CurbRamp', 'type_NoCurbRamp', 'type_NoSidewalk', 'type_Obstacle', 'type_Occlusion', 'type_Other', 'type_SurfaceProblem', 'neighborhood', 'neighborhood_encoded']\n",
             "\n",
             "Sample grid data:\n",
-            "                      grid_id  center_lon  center_lat  issue_count  \\\n",
-            "0  -122.24000000000001_47.505 -122.239044   47.509889            3   \n",
-            "1   -122.24000000000001_47.51 -122.239637   47.510125            6   \n",
-            "2               -122.245_47.5 -122.242585   47.501884           60   \n",
-            "3              -122.245_47.51 -122.241994   47.510430           24   \n",
-            "4               -122.255_47.5 -122.252807   47.503410           13   \n",
+            "                      grid_id  center_lon  center_lat  issue_count  avg_severity  max_severity  \\\n",
+            "0  -122.24000000000001_47.505 -122.239044   47.509889            3      4.000000           4.0   \n",
+            "1   -122.24000000000001_47.51 -122.239637   47.510125            6      4.000000           4.0   \n",
+            "2               -122.245_47.5 -122.242585   47.501884           60      3.266667           5.0   \n",
+            "3              -122.245_47.51 -122.241994   47.510430           24      4.000000           4.0   \n",
+            "4               -122.255_47.5 -122.252807   47.503410           13      2.846154           5.0   \n",
             "\n",
-            "   avg_severity  max_severity  std_severity  temp_count  issue_type_diversity  \\\n",
-            "0      4.000000           4.0      0.000000           0                     1   \n",
-            "1      4.000000           4.0      0.000000           0                     1   \n",
-            "2      3.266667           5.0      0.606928           0                     4   \n",
-            "3      4.000000           4.0      0.000000           0                     1   \n",
-            "4      2.846154           5.0      1.818706           1                     4   \n",
+            "   std_severity  temp_count  issue_type_diversity  type_CurbRamp  type_NoCurbRamp  \\\n",
+            "0      0.000000           0                     1              0                0   \n",
+            "1      0.000000           0                     1              0                0   \n",
+            "2      0.606928           0                     4             35                0   \n",
+            "3      0.000000           0                     1              0                0   \n",
+            "4      1.818706           1                     4              6                4   \n",
             "\n",
-            "   type_CurbRamp  type_NoCurbRamp  type_NoSidewalk  type_Obstacle  \\\n",
-            "0              0                0                3              0   \n",
-            "1              0                0                6              0   \n",
-            "2             35                0                4              0   \n",
-            "3              0                0               24              0   \n",
-            "4              6                4                2              1   \n",
+            "   type_NoSidewalk  type_Obstacle  type_Occlusion  type_Other  type_SurfaceProblem  \\\n",
+            "0                3              0               0           0                    0   \n",
+            "1                6              0               0           0                    0   \n",
+            "2                4              0               3           0                   18   \n",
+            "3               24              0               0           0                    0   \n",
+            "4                2              1               0           0                    0   \n",
             "\n",
-            "   type_Occlusion  type_Other  type_SurfaceProblem neighborhood  \\\n",
-            "0               0           0                    0  Mount Baker   \n",
-            "1               0           0                    0  Mount Baker   \n",
-            "2               3           0                   18  Mount Baker   \n",
-            "3               0           0                    0  Mount Baker   \n",
-            "4               0           0                    0  Mount Baker   \n",
-            "\n",
-            "   neighborhood_encoded  \n",
-            "0                    27  \n",
-            "1                    27  \n",
-            "2                    27  \n",
-            "3                    27  \n",
-            "4                    27  \n"
+            "  neighborhood  neighborhood_encoded  \n",
+            "0  Mount Baker                    27  \n",
+            "1  Mount Baker                    27  \n",
+            "2  Mount Baker                    27  \n",
+            "3  Mount Baker                    27  \n",
+            "4  Mount Baker                    27  \n"
           ]
         }
       ],
@@ -547,7 +538,7 @@
         "le_grid = LabelEncoder()\n",
         "grid_features['neighborhood_encoded'] = le_grid.fit_transform(grid_features['neighborhood'])\n",
         "\n",
-        "print(f\"✓ Grid features created: {grid_features.shape}\")\n",
+        "print(f\"Grid features created: {grid_features.shape}\")\n",
         "print(f\"\\nFeature columns: {list(grid_features.columns)}\")\n",
         "print(f\"\\nSample grid data:\")\n",
         "print(grid_features.head())"
@@ -960,49 +951,49 @@
           "output_type": "stream",
           "text": [
             "Top 20 Future Risk Zones:\n",
-            "     center_lon  center_lat         neighborhood  issue_count  \\\n",
-            "254 -122.312524   47.573052    North Beacon Hill          164   \n",
-            "486 -122.341963   47.561965  Industrial District           94   \n",
-            "753 -122.382560   47.667318                Adams          145   \n",
-            "819 -122.392033   47.672246                Adams          123   \n",
-            "334 -122.316309   47.582960    North Beacon Hill          105   \n",
-            "604 -122.352535   47.686329        Phinney Ridge           38   \n",
-            "302 -122.307447   47.617441              Stevens          145   \n",
-            "912 -122.401295   47.681543          Sunset Hill           55   \n",
-            "96  -122.282189   47.667656               Bryant           69   \n",
-            "536 -122.337211   47.671220           Green Lake          104   \n",
-            "344 -122.318459   47.631781             Broadway           40   \n",
-            "144 -122.292664   47.582424          Mount Baker          169   \n",
-            "649 -122.357928   47.568101  Industrial District           50   \n",
-            "785 -122.377276   47.667231                Adams          118   \n",
-            "841 -122.387813   47.582498  Industrial District           51   \n",
-            "673 -122.359547   47.716757     Whittier Heights           21   \n",
-            "24  -122.262828   47.672999           Windermere           59   \n",
-            "962 -122.397485   47.687567          Sunset Hill           73   \n",
-            "335 -122.316751   47.587982    North Beacon Hill          127   \n",
-            "347 -122.318503   47.646784          Portage Bay          113   \n",
+            "     center_lon  center_lat         neighborhood  issue_count  predicted_issues  \\\n",
+            "254 -122.312524   47.573052    North Beacon Hill          164        197.932173   \n",
+            "486 -122.341963   47.561965  Industrial District           94        119.583333   \n",
+            "753 -122.382560   47.667318                Adams          145        165.374916   \n",
+            "819 -122.392033   47.672246                Adams          123        142.140155   \n",
+            "334 -122.316309   47.582960    North Beacon Hill          105        124.086022   \n",
+            "604 -122.352535   47.686329        Phinney Ridge           38         54.236749   \n",
+            "302 -122.307447   47.617441              Stevens          145        161.038885   \n",
+            "912 -122.401295   47.681543          Sunset Hill           55         70.820403   \n",
+            "96  -122.282189   47.667656               Bryant           69         84.101156   \n",
+            "536 -122.337211   47.671220           Green Lake          104        118.714958   \n",
+            "344 -122.318459   47.631781             Broadway           40         53.703302   \n",
+            "144 -122.292664   47.582424          Mount Baker          169        181.525833   \n",
+            "649 -122.357928   47.568101  Industrial District           50         62.283268   \n",
+            "785 -122.377276   47.667231                Adams          118        129.967538   \n",
+            "841 -122.387813   47.582498  Industrial District           51         62.590897   \n",
+            "673 -122.359547   47.716757     Whittier Heights           21         32.305585   \n",
+            "24  -122.262828   47.672999           Windermere           59         70.116901   \n",
+            "962 -122.397485   47.687567          Sunset Hill           73         83.667235   \n",
+            "335 -122.316751   47.587982    North Beacon Hill          127        137.508709   \n",
+            "347 -122.318503   47.646784          Portage Bay          113        123.352974   \n",
             "\n",
-            "     predicted_issues  future_risk_score  \n",
-            "254        197.932173          33.932173  \n",
-            "486        119.583333          25.583333  \n",
-            "753        165.374916          20.374916  \n",
-            "819        142.140155          19.140155  \n",
-            "334        124.086022          19.086022  \n",
-            "604         54.236749          16.236749  \n",
-            "302        161.038885          16.038885  \n",
-            "912         70.820403          15.820403  \n",
-            "96          84.101156          15.101156  \n",
-            "536        118.714958          14.714958  \n",
-            "344         53.703302          13.703302  \n",
-            "144        181.525833          12.525833  \n",
-            "649         62.283268          12.283268  \n",
-            "785        129.967538          11.967538  \n",
-            "841         62.590897          11.590897  \n",
-            "673         32.305585          11.305585  \n",
-            "24          70.116901          11.116901  \n",
-            "962         83.667235          10.667235  \n",
-            "335        137.508709          10.508709  \n",
-            "347        123.352974          10.352974  \n"
+            "     future_risk_score  \n",
+            "254          33.932173  \n",
+            "486          25.583333  \n",
+            "753          20.374916  \n",
+            "819          19.140155  \n",
+            "334          19.086022  \n",
+            "604          16.236749  \n",
+            "302          16.038885  \n",
+            "912          15.820403  \n",
+            "96           15.101156  \n",
+            "536          14.714958  \n",
+            "344          13.703302  \n",
+            "144          12.525833  \n",
+            "649          12.283268  \n",
+            "785          11.967538  \n",
+            "841          11.590897  \n",
+            "673          11.305585  \n",
+            "24           11.116901  \n",
+            "962          10.667235  \n",
+            "335          10.508709  \n",
+            "347          10.352974  \n"
           ]
         },
         {
@@ -1085,17 +1076,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "✓ Models saved successfully!\n",
-            "  • accessibility_regression_model.pkl\n",
-            "  • accessibility_classification_model.pkl\n",
-            "  • label_encoder_grid.pkl\n"
+            "Models saved successfully!\n",
+            "accessibility_regression_model.pkl\n",
+            "accessibility_classification_model.pkl\n",
+            "label_encoder_grid.pkl\n"
           ]
         }
       ],
@@ -1110,48 +1101,10 @@
         "with open('label_encoder_grid.pkl', 'wb') as f:\n",
         "    pickle.dump(le_grid, f)\n",
         "\n",
-        "print(\"✓ Models saved successfully!\")\n",
-        "print(\"  • accessibility_regression_model.pkl\")\n",
-        "print(\"  • accessibility_classification_model.pkl\")\n",
-        "print(\"  • label_encoder_grid.pkl\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "---\n",
-        "## Summary\n",
-        "\n",
-        "### Model Performance:\n",
-        "\n",
-        "**Task 1 - Barrier Type Classification:**\n",
-        "- Predicts barrier type from location, neighborhood, severity\n",
-        "- Accuracy varies by barrier type (some types easier to predict)\n",
-        "\n",
-        "**Task 2 - High-Risk Hotspots:**\n",
-        "- DBSCAN identifies spatial clusters\n",
-        "- Risk score (count × severity) ranks clusters\n",
-        "- Visualizes current high-risk areas\n",
-        "\n",
-        "**Task 3 - Future Problem Prediction (BEST MODEL):**\n",
-        "- **Regression R²: 0.953** (95.3% variance explained!) ⭐\n",
-        "- **Classification Accuracy: 91.2%**\n",
-        "- **High Risk F1 Score: 0.96** (excellent precision/recall)\n",
-        "- **RMSE: 15.82 issues** (very low error)\n",
-        "- **82.4% predictions within ±10 issues**\n",
-        "\n",
-        "### Key Insights:\n",
-        "1. **Top predictors:** CurbRamp density (32%), SurfaceProblem patterns (23%), NoCurbRamp issues (22%)\n",
-        "2. **Geographic location matters less** than existing issue types\n",
-        "3. **Model excels at identifying high-risk zones** for prioritization\n",
-        "4. **Future risk score** helps find areas needing preventive action\n",
-        "\n",
-        "### Use Cases:\n",
-        "- City planning & resource allocation\n",
-        "- Preventive maintenance scheduling\n",
-        "- Accessibility improvement prioritization\n",
-        "- Budget forecasting for infrastructure"
+        "print(\"Models saved successfully!\")\n",
+        "print(\"accessibility_regression_model.pkl\")\n",
+        "print(\"accessibility_classification_model.pkl\")\n",
+        "print(\"label_encoder_grid.pkl\")"
       ]
     }
   ],
