Added key findings summary to Cell 19.

--- a/accessibility_ml_models.ipynb
+++ b/accessibility_ml_models.ipynb
@@ -559,7 +559,19 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "### Task 2 — Key findings\n",
+        "\n",
+        "| Insight | Detail |\n",
+        "|---|---|\n",
+        "| **370 spatial clusters** | DBSCAN identified 370 distinct hotspots with only 0.4% noise points, indicating strong spatial clustering of accessibility barriers. |\n",
+        "| **Risk score formula** | `count × mean severity` effectively ranks clusters — top clusters have both high volume and severity. |\n",
+        "| **Dominant hotspots** | The top 2 clusters contain ~57,000 issues combined (70% of data), likely representing major arterial corridors. |\n",
+        "| **Neighborhood concentration** | A handful of neighborhoods account for the majority of total risk — prioritize these for infrastructure investment. |\n",
+        "| **Severity variability** | Some clusters have high severity but low count; others have high count but moderate severity. Both patterns require different interventions. |\n",
+        "| **Actionable insight** | City planners should prioritize hotspots with *both* high count and high severity, as interventions there address the most barriers per dollar spent. |\n",
+        "| **Takeaway** | DBSCAN + risk scoring provides a data-driven method to identify and rank accessibility hotspots, enabling targeted infrastructure improvements. |"
+      ]
     },
     {
       "cell_type": "markdown",
