--- a/accessibility_ml_models.ipynb
+++ b/accessibility_ml_models.ipynb
@@ -30,7 +30,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "from sklearn.model_selection import train_test_split, cross_val_score\n",
+        "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
         "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
         "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, f1_score, r2_score, mean_absolute_error, mean_squared_error\n",
